--- a/java/plugins/Geyser-BungeeCord/config.yml
+++ b/java/plugins/Geyser-BungeeCord/config.yml
@@ -19,10 +19,10 @@ bedrock:
   clone-remote-port: false
   # The MOTD that will be broadcasted to Minecraft: Bedrock Edition clients. This is irrelevant if "passthrough-motd" is set to true
   # If either of these are empty, the respective string will default to "Geyser"
-  motd1: "Host-byONLY-LOCAL-Luz_us"
-  motd2: "ServerRandom"
+  motd1: "Host by Tu nick del mine"
+  motd2: "Perita Global Server"
   # The Server Name that will be sent to Minecraft: Bedrock Edition clients. This is visible in both the pause menu and the settings menu.
-  server-name: "Perita"
+  server-name: "Perita Global" #Nombre del mundo/puede ser cualquier nombre solo es visual
   # How much to compress network traffic to the Bedrock client. The higher the number, the more CPU usage used, but
   # the smaller the bandwidth used. Does not have any effect below -1 or above 9. Set to -1 to disable.
   compression-level: 6
@@ -120,7 +120,7 @@ allow-third-party-ears: false
 
 # Allow a fake cooldown indicator to be sent. Bedrock players do not see a cooldown as they still use 1.8 combat
 # Can be title, actionbar or false
-show-cooldown: title
+show-cooldown: false
 
 # Controls if coordinates are shown to players.
 show-coordinates: false
