--- a/bedrock/config.yml
+++ b/bedrock/config.yml
@@ -2,110 +2,122 @@
 # Configure your desired network settings here.
 
 
-# A list of all downstream servers that are available right after starting
-# address field is formatted using ip:port
-# publicAddress is optional and can be set to the ip players can directly connect through
+# Una lista de todos los servidores descendentes que están disponibles justo después de iniciar
+# el campo de dirección se formatea usando ip: puerto
+# publicAddress es opcional y se puede configurar para que los reproductores ip se puedan conectar directamente a través de
 servers:
-  pvp:
-    address: 127.0.0.1:19150
+  server:
+    address: 127.0.0.1:19137
     server_type: bedrock
+    
+  #survival:
+    #address: 127.0.0.1:19138
+    
+  #skyblock:
+    #address: 127.0.0.1:19139
+    #server_type: bedrock
+    
 listener:
 
-  # The Motd which will be displayed in the server tab of a player and returned during ping
-  motd: ServerPVP
+  # El Motd que se mostrará en la pestaña del servidor de un jugador y se devolverá durante el ping
+  motd: Perita Global Proxy
 
-  # The name that is shown up in the player list (pause menu)
-  name: FULL PVP
+  # El nombre que se muestra en la lista de jugadores (menú de pausa)
+  name: Perita Bedrock Proxy
 
-  # The server priority list. If not changed by plugins, the proxy will connect the player to the first of those servers
+  # La lista de prioridades del servidor. Si los complementos no lo modifican, el proxy conectará al jugador al primero de esos servidores.
   priorities:
-  - pvp
+  - server
 
-  # The address to bind the server to
+  # La dirección a la que vincular el servidor
   host: 0.0.0.0:19132
 
-  # The maximum amount of players that can connect to this proxy instance
-  max_players: 20
+  # La cantidad máxima de jugadores que pueden conectarse a esta instancia de proxy
+  max_players: 50
 
-  # Map the ip a player joined through to a specific server
-  # for example skywars.xyz.com => SkyWars-1
-  # when a player connects using skywars-xyz.com as the serverIp, he will be connected to SkyWars-1 directly
+  # Asigne la ip a través de la cual un jugador se unió a un servidor específico
+  # por ejemplo skywars.xyz.com => SkyWars-1
+  # cuando un jugador se conecta usando skywars-xyz.com como serverIp, se conectará a SkyWars-1 directamente
   forced_hosts: {}
 
-# Case-Sensitive permission list for players (empty using {})
+# Lista de permisos para jugadores que distingue entre mayúsculas y minúsculas (vacía con {})
 permissions:
-  TobiasDev:
+  TuNickDelMine:
   - waterdog.player.transfer
   - waterdog.player.list
-  alemiz003:
-  - waterdog.player.transfer
-  - waterdog.player.list
+  - waterdog.command.help
+  - waterdog.command.info
+  #alemiz003:
+  # - waterdog.player.transfer
+  # - waterdog.player.list
+  # - waterdog.command.help
+  # - waterdog.command.info
 
-# List of permissions each player should get by default (empty using [])
-permissions_default:
-- waterdog.command.help
-- waterdog.command.info
+# Lista de permisos que cada jugador debe obtener por defecto (vacía usando [])
+permissions_default: []
+#- waterdog.command.help
+#- waterdog.command.info
 
-# Whether the debug output in the console should be enabled or not
+# Si la salida de depuración en la consola debe habilitarse o no
 enable_debug: false
 
-# If enabled, encrypted connection between client and proxy will be created
+# Si está habilitado, se creará una conexión cifrada entre el cliente y el proxy
 upstream_encryption: true
 
-# If enabled, only players which are authenticated with XBOX Live can join. If disabled, anyone can connect *with any name*
-online_mode: true
+# Si está habilitado, solo los jugadores autenticados con XBOX Live pueden unirse. Si está deshabilitado, cualquiera puede conectarse *con cualquier nombre*
+online_mode: false
 
-# If enabled, the proxy will be able to bind to an Ipv6 Address
+# Si está habilitado, el proxy podrá vincularse a una dirección IPv6
 enable_ipv6: false
 
-# Additional ports to listen to
+# Puertos adicionales para escuchar
 additional_ports: []
 
-# If enabled, the proxy will pass information like XUID or IP to the downstream server using custom fields in the LoginPacket
+# Si está habilitado, el proxy pasará información como XUID o IP al servidor descendente usando campos personalizados en el LoginPacket
 use_login_extras: false
 
-# Replaces username spaces with underscores if enabled
-replace_username_spaces: false
+# Reemplaza los espacios de nombre de usuario con guiones bajos si está habilitado
+replace_username_spaces: true
 
-# Whether server query should be enabled
+# Si la consulta del servidor debe estar habilitada
 enable_query: true
 
-# If enabled, when receiving a McpeTransferPacket, the proxy will check if the target server is in the downstream list, and if yes, use the fast transfer mechanism
+# Si está habilitado, al recibir un McpeTransferPacket, el proxy verificará si el servidor de destino está en la lista descendente y, en caso afirmativo, utilizará el mecanismo de transferencia rápida.
 prefer_fast_transfer: true
 
-# Fast-codec only decodes the packets required by the proxy, everything else will be passed rawly. Disabling this can create a performance hit
+# Fast-codec solo decodifica los paquetes requeridos por el proxy, todo lo demás se pasará sin procesar. Deshabilitar esto puede crear un impacto en el rendimiento
 use_fast_codec: true
 
-# If enabled, the proxy will inject all the proxy commands in the AvailableCommandsPacket, enabling autocompletion
+# Si está habilitado, el proxy inyectará todos los comandos de proxy en el AvailableCommandsPacket, habilitando el autocompletado
 inject_proxy_commands: true
 
-# Algorithm used for upstream compression. Currently supported: zlib, snappy
-# This is only applicable on 1.19.30 and newer versions
+# Algoritmo utilizado para la compresión ascendente. Compatible actualmente: zlib, snappy
+# Esto solo es aplicable en 1.19.30 y versiones más nuevas
 compression: zlib
 
-# Upstream server compression ratio(proxy to client), higher = less bandwidth, more cpu, lower vice versa
+# Relación de compresión del servidor ascendente (proxy a cliente), mayor = menos ancho de banda, más CPU, menor viceversa
 upstream_compression_level: 6
 
-# Downstream server compression ratio(proxy to downstream server), higher = less bandwidth, more cpu, lower vice versa
+# Relación de compresión del servidor descendente (proxy a servidor descendente), mayor = menos ancho de banda, más CPU, menor viceversa
 downstream_compression_level: 2
 
-# Education features require small adjustments to work correctly. Enable this option if any of downstream servers support education features.
-enable_edu_features: true
+# Las funciones educativas requieren pequeños ajustes para funcionar correctamente. Habilite esta opción si alguno de los servidores posteriores admite funciones educativas.
+enable_edu_features: false
 
-# Enable/Disable the resource pack system
+# Habilitar/Deshabilitar el sistema del paquete de recursos
 enable_packs: true
 
-# If this is enabled, the client will not be able to use custom packs
+# Si esto está habilitado, el cliente no podrá usar paquetes personalizados
 overwrite_client_packs: false
 
-# If enabled, the client will be forced to accept server-sided resource packs
+# Si está habilitado, el cliente se verá obligado a aceptar paquetes de recursos del lado del servidor
 force_server_packs: false
 
-# You can set maximum pack size in MB to be cached.
+# Puede establecer el tamaño máximo del paquete en MB para almacenar en caché.
 pack_cache_size: 16
 
-# Creating threads may be in some situations expensive. Specify minimum count of idle threads per internal thread executors. Set to -1 to auto-detect by core count.
+# Crear hilos puede ser costoso en algunas situaciones. Especifique el recuento mínimo de subprocesos inactivos por ejecutores de subprocesos internos. Establézcalo en -1 para la detección automática por recuento de núcleos.
 default_idle_threads: -1
 
-# Enable anonymous statistics that are sent to bstats. For more information, check out our bstats page at https://bstats.org/plugin/server-implementation/WaterdogPE/15678
+# Habilite las estadísticas anónimas que se envían a bstats. Para obtener más información, consulte nuestra página bstats en https://bstats.org/plugin/server-implementation/WaterdogPE/15678
 enable_statistics: true
